--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
     I am a Web Developer as well as Graphics Designer.....
 </div>
 
+hello i have changed the location of code
 
 </body>
 </html>
