--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <a href="home.html" target="_blank">Home</a>
                 </li>
                 <li>
-                    <a href="about.html" target="_blank">About Us</a>
+                    <a href="to do list.html" target="_blank">To Do</a>
                 </li>
                 <li>
                     <a href="service.html" target="_blank">Services</a>
@@ -37,15 +37,14 @@
             </ul>
         </div>
          
-        <div >
-            <ul class="nav-social-ul">
+        <div class="nav-social-ul">
                 <li>
                     <a href="https://www.facebook.com" target="_blank">
                         <img src="icons/facebook.png" alt="facebook logo">
                     </a>
                 </li>
                 <li>
-                    <a href="https://github.com" target="_blank">
+                    <a href="https://github.com/anit10stha" target="_blank">
                         <img src="icons/github.png" alt="Github logo">
                     </a>
                 </li>
@@ -54,7 +53,6 @@
                         <img src="icons/instagram.png" alt="Instagram logo">
                     </a>
                 </li>
-            </ul>
         </div>
     </nav>
    </div>
